Fix display on mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 6rem;
+  height: 9rem;
   background-color: #f5f5f5;
 }
 .footer > .container {
